WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236626
[css-grid] Absolutely positioned children using 'auto' placement don't cover margin correctly when using RTL
https://bugs.webkit.org/show_bug.cgi?id=236626
Summary
[css-grid] Absolutely positioned children using 'auto' placement don't cover ...
Matt Woodrow
Reported
2022-02-14 18:01:48 PST
It looks like our array of column positions is ordered logically (column 0 is the physical right-edge when using RTL), but is always shifted by the physical left border and padding. When computing the breadth of an abs-pos item that covers the padding area (using 'auto'), we need to account for this, since the auto lines are purely in logical coords.
Attachments
Patch
(5.47 KB, patch)
2022-02-14 18:05 PST
,
Matt Woodrow
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2022-02-14 18:05:01 PST
Created
attachment 451974
[details]
Patch
EWS Watchlist
Comment 2
2022-02-14 18:06:49 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
EWS
Comment 3
2022-02-17 09:59:06 PST
Committed
r290032
(
247412@main
): <
https://commits.webkit.org/247412@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 451974
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-02-17 10:00:38 PST
<
rdar://problem/89093512
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug