Fix abs-pos breadth issue when using 'auto' https://bugs.webkit.org/show_bug.cgi?id=236626

Patch by Matt Woodrow <mattwoodrow@apple.com> on 2022-02-17
Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

Adds new test that uses RTL and abs-pos items over the padding area, with
padding defined in physical coords.

* web-platform-tests/css/css-grid/abspos/positioned-grid-items-025-expected.html: Added.
* web-platform-tests/css/css-grid/abspos/positioned-grid-items-025.html: Added.

Source/WebCore:

The value returned when resolving an 'auto' start/end is in logical coords, but the line
positions are in a hybrid space using logical column sizes, but physical border/padding offset.
This adjusts for this, so that we can compute the breadth correctly.

Adds new test that uses RTL and abs-pos items over the padding area, with
padding defined in physical coords.

Test: imported/w3c/web-platform-tests/css/css-grid/abspos/positioned-grid-items-025.html

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::gridAreaBreadthForOutOfFlowChild):


Canonical link: https://commits.webkit.org/247412@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290032 268f45cc-cd09-0410-ab3c-d52691b4dbfc